--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -44,6 +44,7 @@
     font-size: 100px;
     font-weight: 900;
     letter-spacing: -11px;
+    color: #fff;
 
     @include mobile {
       font-size: 30px;
