--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -5,9 +5,9 @@ body {
 
 .headline {
   position: absolute;
+  transform: translateY(100%) rotate(90deg);
   font-size: 25px;
   color: #fff;
-  transform: translateY(100%) rotate(90deg);
   letter-spacing: 0.04em;
 
   @include mobile {
@@ -32,10 +32,10 @@ body {
 
 .text-box {
   position: relative;
+  z-index: 1;
   display: flex;
   align-items: flex-start;
   color: #fff;
-  z-index: 1;
 }
 
 .title {
@@ -80,30 +80,30 @@ body {
     }
 
     @include mobile {
-      font-size: 14px;
       display: flex;
       flex-direction: column;
+      font-size: 14px;
     }
   }
 }
 
-.sup-container {
-  display: inline-block;
-  position: relative;
-  vertical-align: top;
+.sup {
+  &-container {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+  }
 
-  .sup {
-    position: absolute;
-    font-size: 14px;
-    top: -10px;
-    left: -16px;
-    white-space: nowrap;
+  position: absolute;
+  top: -10px;
+  left: -16px;
+  font-size: 14px;
+  white-space: nowrap;
 
-    @include mobile {
-      font-size: 0.1em;
-      top: -5px;
-      left: -10px;
-    }
+  @include mobile {
+    top: -5px;
+    left: -10px;
+    font-size: 0.1em;
   }
 }
 
@@ -112,8 +112,8 @@ body {
   top: 2%;
   right: -4%;
   font-size: 25px;
-  color: #fff;
   transform: translateY(100%) rotate(90deg);
+  color: #fff;
   letter-spacing: 0.04em;
 
   &::after {
@@ -134,12 +134,12 @@ body {
   gap: 16px;
 
   .link-title {
-    font-size: 31px;
     position: relative;
     overflow: hidden;
+    display: inline-block;
     height: 26px;
     min-width: 200px;
-    display: inline-block;
+    font-size: 31px;
     word-break: break-all;
     letter-spacing: 0;
 
@@ -153,14 +153,14 @@ body {
     }
 
     @include mobile {
+      min-width: 110px;
       font-size: 18.5px;
       margin-left: 116px;
-      min-width: 110px;
     }
 
     span {
-      display: inline-block;
       position: absolute;
+      display: inline-block;
       width: 100%;
       transition: 0.2s;
       line-height: 1;
@@ -184,11 +184,11 @@ body {
   .about-arrow {
     position: relative;
     overflow: hidden;
+    display: inline-block;
     width: 60px;
     height: 60px;
     border-radius: 50%;
     border: 2px solid #fff;
-    display: inline-block;
 
     @include mobile {
       width: 28px;
@@ -197,12 +197,12 @@ body {
     }
 
     span {
-      display: inline-block;
       position: absolute;
+      top: 0%;
+      display: inline-block;
       width: 100%;
       height: 100%;
       transition: 0.2s;
-      top: 0%;
 
       img {
         width: 25px;
@@ -222,10 +222,10 @@ body {
       }
 
       &.next {
-        right: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
+        right: 100%;
       }
     }
   }
@@ -283,9 +283,9 @@ body {
 
     .title {
       .char {
-        transform: scale(1);
         position: relative;
         z-index: 1;
+        transform: scale(1);
       }
 
       @include mobile {
@@ -294,11 +294,11 @@ body {
     }
 
     .sub-title {
+      transform: translateY(0%);
       padding-top: 20px;
       color: #fff;
       font-size: 39px;
       opacity: 1;
-      transform: translateY(0%);
 
       @include mobile {
         padding-top: 16px;
@@ -309,7 +309,6 @@ body {
 }
 
 
-// inner 있음
 .section-concept {
   margin-top: 300px;
 
@@ -370,7 +369,6 @@ body {
   }
 }
 
-// inner 없음
 .section-banner {
   margin-top: 100px;
 
@@ -393,11 +391,9 @@ body {
   }
 }
 
-// inner 있어도 배경컬러가 있음
 .section-about {
   position: relative;
   max-width: 1162px;
-  // margin-left: calc(50vw - min(100vw, 1440px)/ 2);
   padding: 30px 0;
   padding-bottom: 100px;
 
@@ -407,7 +403,6 @@ body {
     margin-left: calc(50vw - min(100vw, 640px)/ 2);
     padding: 113px 0;
   }
-
 
   .background {
     position: absolute;
@@ -445,11 +440,10 @@ body {
   }
 
   .image-box {
+    transform: translateY(-15%);
     max-width: 1093px;
     margin-right: -278px;
-    transform: translateY(-15%);
     margin-left: auto;
-
     clip-path: polygon(100% 100%, 0% 100%, 0.00% 36.67%, 2.00% 36.00%, 4.00% 34.06%, 6.00% 31.05%, 8.00% 27.30%, 10.00% 23.20%, 12.00% 19.19%, 14.00% 15.68%, 16.00% 13.06%, 18.00% 11.59%, 20.00% 11.43%, 22.00% 12.61%, 24.00% 14.99%, 26.00% 18.32%, 28.00% 22.25%, 30.00% 26.37%, 32.00% 30.24%, 34.00% 33.45%, 36.00% 35.66%, 38.00% 36.63%, 40.00% 36.27%, 42.00% 34.61%, 44.00% 31.83%, 46.00% 28.22%, 48.00% 24.16%, 50.00% 20.09%, 52.00% 16.43%, 54.00% 13.57%, 56.00% 11.81%, 58.00% 11.35%, 60.00% 12.22%, 62.00% 14.34%, 64.00% 17.48%, 66.00% 21.31%, 68.00% 25.43%, 70.00% 29.39%, 72.00% 32.79%, 74.00% 35.25%, 76.00% 36.52%, 78.00% 36.47%, 80.00% 35.10%, 82.00% 32.55%, 84.00% 29.10%, 86.00% 25.11%, 88.00% 21.00%, 90.00% 17.21%, 92.00% 14.14%, 94.00% 12.11%, 96.00% 11.34%, 98.00% 11.91%, 100.00% 13.75%);
     transition: 1s;
 
@@ -459,12 +453,12 @@ body {
     }
 
     @include mobile {
+      left: 10%;
+      right: 100%;
       width: calc(100vw - 85px);
       margin-top: -28px;
       margin-right: 0;
       margin-left: 84px;
-      left: 10%;
-      right: 100%;
     }
 
     img {
@@ -483,7 +477,6 @@ body {
     @include mobile {
       max-width: 162.5px;
     }
-
   }
 
   .bottom-text {
@@ -493,7 +486,6 @@ body {
     line-height: 1.67;
     font-size: 22px;
     font-weight: 900;
-
     padding-top: 40px;
     letter-spacing: normal;
 
@@ -592,7 +584,6 @@ body {
 
             @include mobile {
               min-width: 130px;
-
             }
           }
         }
@@ -641,8 +632,6 @@ body {
       width: 100%;
     }
   }
-
-
 }
 
 .section-products {
@@ -757,11 +746,11 @@ body {
       height: 100%;
 
       .image-box {
+        position: relative;
+        top: 8.7%;
+        z-index: 1;
         width: 242px;
         margin: 0 auto;
-        position: relative;
-        z-index: 1;
-        top: 8.7%;
 
         @include desktop {
           width: 190px;
@@ -851,12 +840,12 @@ body {
     color: #fff;
 
     @include mobile {
-      position: relative;
-      left: 0;
-      bottom: 0;
       display: flex;
       align-items: center;
       justify-content: center;
+      position: relative;
+      left: 0;
+      bottom: 0;
 
       .about-arrow {
         width: 50px;
@@ -875,10 +864,10 @@ body {
     }
 
     .link-title {
-      font-size: 31px;
       position: relative;
-      border: 0;
       height: 33px;
+      font-size: 31px;
+      border: 0;
       text-align: center;
       letter-spacing: 0;
       word-break: break-all;
@@ -900,8 +889,8 @@ body {
       }
 
       span {
-        display: inline-block;
         position: absolute;
+        display: inline-block;
         width: 100%;
         transition: 0.2s;
         line-height: 1;
@@ -964,7 +953,6 @@ body {
     @include mobile {
       max-width: 640px;
       margin: auto 30px;
-
       padding: 100px 0 40px 0;
     }
 
@@ -1024,9 +1012,7 @@ body {
                 }
               }
             }
-
           }
-
         }
       }
 
@@ -1053,16 +1039,12 @@ body {
         .btn-prev {
           transform: rotate(180deg);
         }
-
       }
     }
-
   }
-
 }
 
 .section-exBanner {
-
   padding-top: 110px;
   padding-bottom: 172px;
 
@@ -1105,17 +1087,15 @@ body {
             object-fit: contain;
           }
         }
-
       }
 
       .banner {
-        background: #fff;
-        height: 100%;
-        width: 50%;
-
         display: flex;
         align-items: center;
         justify-content: center;
+        background: #fff;
+        height: 100%;
+        width: 50%;
 
         @include mobile {
           height: 65px;
@@ -1187,6 +1167,4 @@ body {
       }
     }
   }
-
-
 }
