브랜딩 교체 중

--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -37,7 +37,8 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  background: #ff5885;
+  // background: #ff5885;
+  background: #e5631c;
   z-index: 100;
 
   p {
