--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -1,5 +1,6 @@
 body {
-  background-color: #ff9daf;
+  background-color: #f48f58;
+  // background-color: #ff9daf;
 }
 
 
@@ -45,6 +46,7 @@ body {
   word-wrap: break-word;
   line-height: 1.1;
   letter-spacing: -0.02em;
+  font-family: "SUITE-Regular", sans-serif;
 
   @include mobile {
     font-size: 8.5vw;
@@ -53,11 +55,13 @@ body {
 
 .desc {
   font-weight: 900;
-  font-size: 45px;
+  font-size: 40px;
+  // font-size: 45px;
   line-height: 1.4;
   color: #fff;
   word-wrap: break-word;
   letter-spacing: -0.02em;
+  font-family: "SUITE-Regular", sans-serif;
 
   @include mobile {
     line-height: 1.5;
@@ -137,19 +141,21 @@ body {
     position: relative;
     overflow: hidden;
     display: inline-block;
-    height: 26px;
+    height: 32px;
     min-width: 200px;
     font-size: 31px;
     word-break: break-all;
     letter-spacing: 0;
+    font-family: "Poppins", sans-serif;
+
 
     &::after {
       content: "";
       display: block;
       position: absolute;
-      bottom: 5px;
+      bottom: 0px;
       width: 100%;
-      border-bottom: 1px solid #fff;
+      border-bottom: 1.5px solid #fff;
     }
 
     @include mobile {
@@ -282,6 +288,8 @@ body {
     align-items: center;
 
     .title {
+      font-family: "Poppins", sans-serif;
+
       .char {
         position: relative;
         z-index: 1;
@@ -310,7 +318,7 @@ body {
 
 
 .section-concept {
-  margin-top: 300px;
+  margin-top: 400px;
 
   @include mobile {
     margin-top: 100px;
@@ -411,7 +419,8 @@ body {
     bottom: 0;
     left: calc(-50vw - min(100vw, 1162px) * -1 / 2);
     z-index: -1;
-    background: #ff5885;
+    background: #e5631c;
+    // background: #ff5885;
 
     @include mobile {
       left: calc(-50vw - min(100vw, 640px) * -1 / 2);
@@ -431,6 +440,7 @@ body {
     z-index: 1;
     padding-left: 245px;
     font-size: 110px;
+    // font-family: "SUITE-Regular", sans-serif;
 
     @include mobile {
       padding-left: 63px;
@@ -472,7 +482,7 @@ body {
   }
 
   .top {
-    max-width: 688px;
+    max-width: 900px;
 
     @include mobile {
       max-width: 162.5px;
@@ -589,6 +599,7 @@ body {
         }
 
         .text {
+
           br:nth-child(4) {
             display: none;
           }
@@ -598,6 +609,10 @@ body {
               display: block;
             }
           }
+        }
+
+        .link-title {
+          min-width: 260px;
         }
       }
     }
@@ -700,6 +715,12 @@ body {
       grid-column: 2;
       grid-row: 2/5;
 
+      .inner-content {
+        .image-box {
+          width: 334px;
+        }
+      }
+
       @include mobile {
         grid-column: auto;
         grid-row: auto;
@@ -736,7 +757,8 @@ body {
       width: 100%;
       height: 100%;
       border-radius: 360px;
-      background-color: #ff5885;
+      background-color: #e5631c;
+      // background-color: #ff5885;
     }
 
     .inner-content {
@@ -751,6 +773,8 @@ body {
         z-index: 1;
         width: 242px;
         margin: 0 auto;
+
+
 
         @include desktop {
           width: 190px;
@@ -796,6 +820,15 @@ body {
           }
         }
       }
+
+      .link-title {
+        min-width: 175px;
+
+        &:after {
+          bottom: 10px;
+          border-width: 1px;
+        }
+      }
     }
 
     .content-title {
@@ -824,6 +857,7 @@ body {
     .link-title {
       font-size: 20px;
       letter-spacing: 0.08em;
+      min-width: 150px;
 
       @include mobile {
         font-size: 12px;
@@ -928,7 +962,8 @@ body {
 
 
 .section-news {
-  background: #ff5885;
+  background: #e5631c;
+  // background: #ff5885;
   position: relative;
   margin-top: 256px;
 
@@ -983,6 +1018,9 @@ body {
                   font-size: 17px;
                   line-height: 1.6;
                   letter-spacing: 0.04em;
+                  @include ellipse(5);
+                  font-family: "Poppins", sans-serif;
+
 
                   @include mobile {
                     font-size: 14px;
