--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@
   src: url("../fonts/pxiByp8kv8JHgFVrLEj6Z1xlFd2JQEk.woff2") format("woff2");
   font-weight: 400;
 }
+@font-face {
+  font-family: "SUITE-Regular";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2") format("woff2");
+}
 :root {
   -webkit-tap-highlight-color: transparent;
   /* 뷰포트가 변경이 되면 자동으로 폰트 크기가 조절되는 걸 방지해주는 비표준 css 속성 */
@@ -35,7 +39,6 @@
 * {
   margin: 0;
   padding: 0;
-  font: inherit;
   color: inherit;
 }
 
@@ -133,7 +136,7 @@ fieldset {
   justify-content: center;
   width: 100%;
   height: 100%;
-  background: #ff5885;
+  background: #e5631c;
   z-index: 100;
 }
 .loading p {
@@ -872,7 +875,7 @@ fieldset {
 }
 
 body {
-  background-color: #ff9daf;
+  background-color: #f48f58;
 }
 
 .headline {
@@ -918,6 +921,7 @@ body {
   word-wrap: break-word;
   line-height: 1.1;
   letter-spacing: -0.02em;
+  font-family: "SUITE-Regular", sans-serif;
 }
 @media screen and (max-width: 960px) {
   .title {
@@ -927,11 +931,12 @@ body {
 
 .desc {
   font-weight: 900;
-  font-size: 45px;
+  font-size: 40px;
   line-height: 1.4;
   color: #fff;
   word-wrap: break-word;
   letter-spacing: -0.02em;
+  font-family: "SUITE-Regular", sans-serif;
 }
 @media screen and (max-width: 960px) {
   .desc {
@@ -1010,19 +1015,20 @@ body {
   position: relative;
   overflow: hidden;
   display: inline-block;
-  height: 26px;
+  height: 32px;
   min-width: 200px;
   font-size: 31px;
   word-break: break-all;
   letter-spacing: 0;
+  font-family: "Poppins", sans-serif;
 }
 .link-headline .link-title::after {
   content: "";
   display: block;
   position: absolute;
-  bottom: 5px;
+  bottom: 0px;
   width: 100%;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1.5px solid #fff;
 }
 @media screen and (max-width: 960px) {
   .link-headline .link-title {
@@ -1134,6 +1140,9 @@ body {
   flex-direction: column;
   align-items: center;
 }
+.section-slogan .title-box .title {
+  font-family: "Poppins", sans-serif;
+}
 .section-slogan .title-box .title .char {
   position: relative;
   z-index: 1;
@@ -1159,7 +1168,7 @@ body {
 }
 
 .section-concept {
-  margin-top: 300px;
+  margin-top: 400px;
 }
 @media screen and (max-width: 960px) {
   .section-concept {
@@ -1258,7 +1267,7 @@ body {
   bottom: 0;
   left: calc(-50vw - min(100vw, 1162px) * -1 / 2);
   z-index: -1;
-  background: #ff5885;
+  background: #e5631c;
 }
 @media screen and (max-width: 960px) {
   .section-about .background {
@@ -1318,7 +1327,7 @@ body {
   margin-left: 14%;
 }
 .section-about .top {
-  max-width: 688px;
+  max-width: 900px;
 }
 @media screen and (max-width: 960px) {
   .section-about .top {
@@ -1439,6 +1448,9 @@ body {
     display: block;
   }
 }
+.section-ethical .text-box .desc .bottom .link-title {
+  min-width: 260px;
+}
 .section-ethical .image-box {
   max-width: 1093px;
   margin-right: auto;
@@ -1536,6 +1548,9 @@ body {
   grid-column: 2;
   grid-row: 2/5;
 }
+.section-products .content:nth-child(2) .inner-content .image-box {
+  width: 334px;
+}
 @media screen and (max-width: 960px) {
   .section-products .content:nth-child(2) {
     grid-column: auto;
@@ -1570,7 +1585,7 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 360px;
-  background-color: #ff5885;
+  background-color: #e5631c;
 }
 .section-products .content .inner-content {
   position: absolute;
@@ -1629,6 +1644,13 @@ body {
     font-size: 12px;
   }
 }
+.section-products .content .text-box .link-title {
+  min-width: 175px;
+}
+.section-products .content .text-box .link-title:after {
+  bottom: 10px;
+  border-width: 1px;
+}
 .section-products .content .content-title {
   position: absolute;
   top: 8%;
@@ -1655,6 +1677,7 @@ body {
 .section-products .link-headline .link-title {
   font-size: 20px;
   letter-spacing: 0.08em;
+  min-width: 150px;
 }
 @media screen and (max-width: 960px) {
   .section-products .link-headline .link-title {
@@ -1744,7 +1767,7 @@ body {
 }
 
 .section-news {
-  background: #ff5885;
+  background: #e5631c;
   position: relative;
   margin-top: 256px;
 }
@@ -1798,6 +1821,12 @@ body {
   font-size: 17px;
   line-height: 1.6;
   letter-spacing: 0.04em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  font-family: "Poppins", sans-serif;
 }
 @media screen and (max-width: 960px) {
   .section-news .inner .content .swiper-wrapper .swiper-slide .link-news .text-box .bottom .text {
