--- a/assets/scss/base/_typo.scss
+++ b/assets/scss/base/_typo.scss
@@ -10,3 +10,9 @@
   src: url('../fonts/pxiByp8kv8JHgFVrLEj6Z1xlFd2JQEk.woff2') format('woff2');
   font-weight: 400;
 }
+
+
+@font-face {
+  font-family: 'SUITE-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2') format('woff2');
+}
