--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,7 +1,7 @@
 /* footer */
 .footer {
   position: relative;
-  padding: 172px 0 100px;
+  padding: 130px 0 100px;
   background: url("../images/footer_background.webp")50%/1440px auto;
   background-position: 0 bottom;
   transform-origin: center bottom;
@@ -18,7 +18,7 @@
     width: calc(100vw - 240px);
     max-width: 1200px;
     margin: 0 auto;
-    padding-top: 80px;
+    // padding-top: 80px;
 
 
     @include mobile {
@@ -43,17 +43,35 @@
     }
 
     .title {
-      font-size: 6vw;
+      // font-size: 6vw;
       // line-height: 170px;
+      font-size: 11vw;
+      font-weight: bold;
+      font-family: "Poppins", sans-serif;
+      white-space: nowrap;
+
+      br {
+        display: none;
+      }
 
       @include mobile {
-        font-size: 22vw;
+        font-size: 20vw;
+        line-height: 0.85;
+
+        br {
+          display: block;
+        }
+
+        // font-size: 22vw;
       }
     }
 
     .sub-title {
-      font-size: 2vw;
+      font-size: 3vw;
+      // font-size: 2vw;
       color: #fff;
+      font-family: "SUITE-Regular", sans-serif;
+      line-height: 1;
 
 
       @include mobile {
@@ -61,7 +79,6 @@
 
       }
 
-      // line-height: 1;
     }
   }
 
@@ -71,7 +88,7 @@
     justify-content: space-between;
     font-size: 19px;
     color: #fff;
-    padding-top: 120px;
+    padding-top: 100px;
 
     @include mobile {
       display: flex;
@@ -89,13 +106,30 @@
         align-items: center;
       }
 
+      @include minDevice {
+        gap: 20px;
+      }
+
       .title {
         font-size: 18px;
         color: #fff;
         width: auto;
+        font-family: "Poppins", sans-serif;
+
+        br {
+          display: none;
+        }
 
         @include mobile {
           font-size: 16.5px;
+        }
+
+        @include minDevice {
+          font-size: 12px;
+
+          br {
+            display: block;
+          }
         }
       }
 
@@ -104,8 +138,12 @@
         align-items: center;
         gap: 32px;
 
+        @include minDevice {
+          gap: 20px;
+        }
+
         .sns-item {
-          .instagram {
+          #instagram {
             &:before {
               content: "";
               display: block;
@@ -119,6 +157,11 @@
                 width: 34px;
                 height: 32px;
               }
+
+              @include minDevice {
+                width: 26px;
+                height: 24px;
+              }
             }
 
             &:hover {
@@ -128,7 +171,7 @@
             }
           }
 
-          .twitter {
+          #twitter {
             &:before {
               content: "";
               display: block;
@@ -140,6 +183,11 @@
               @include mobile {
                 width: 34px;
                 height: 28px;
+              }
+
+              @include minDevice {
+                width: 26px;
+                height: 20px;
               }
             }
 
@@ -156,20 +204,82 @@
 
     .group-grid {
       align-items: flex-start;
-      gap: 20px;
+      // gap: 20px;
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(2, 0.8fr);
+      // grid-template-columns: repeat(2, 1fr);
       padding: 0;
-      gap: 0 30px;
+      // gap: 0 30px;
+      gap: 0;
+
+      @include mobile {
+        font-size: 16px;
+        grid-template-columns: repeat(2, 120px);
+        // .nav-list {
+        //   display: flex;
+        //   flex-direction: column;
+        //   gap: 24px;
+        //   padding: 32px 0;
+
+        //   .nav-item {
+
+        //     a {
+        //       display: block;
+        //       position: relative;
+        //       overflow: hidden;
+        //       height: 15px;
+        //       line-height: 15px;
+
+        //       span {
+        //         position: absolute;
+        //         transition: 0.3s;
+        //         width: 100%;
+        //         line-height: 1;
+        //         height: 100%;
+
+        //         &.top {
+        //           top: 0;
+        //           left: 0;
+        //         }
+
+        //         &.bottom {
+        //           top: 100%;
+        //           left: 0;
+        //         }
+        //       }
+
+        //       &:hover {
+        //         .top {
+        //           top: -100%;
+        //         }
+
+        //         .bottom {
+        //           top: 0;
+        //         }
+        //       }
+        //     }
+        //   }
+        // }
+      }
 
       .nav-list {
         display: flex;
         flex-direction: column;
-        gap: 15px;
-        padding: 30px 0;
+        gap: 20px;
+
+        @include mobile {
+          display: flex;
+          flex-direction: column;
+          gap: 24px;
+          padding: 32px 0;
+        }
+
+        @include minDevice {
+          font-size: 12px;
+          gap: 10px;
+        }
 
         .nav-item {
-
           a {
             display: block;
             position: relative;
@@ -182,7 +292,6 @@
               word-break: break-all;
               transition: 0.3s;
               width: 100%;
-              // line-height: 1;
               height: 100%;
 
               &.top {
@@ -208,63 +317,12 @@
           }
         }
       }
-
-      @include mobile {
-        font-size: 14px;
-
-        .nav-list {
-          display: flex;
-          flex-direction: column;
-          gap: 24px;
-          padding: 32px 0;
-
-          .nav-item {
-
-            a {
-              display: block;
-              position: relative;
-              overflow: hidden;
-              height: 15px;
-              line-height: 15px;
-
-              span {
-                position: absolute;
-                transition: 0.3s;
-                width: 100%;
-                line-height: 1;
-                height: 100%;
-
-                &.top {
-                  top: 0;
-                  left: 0;
-                }
-
-                &.bottom {
-                  top: 100%;
-                  left: 0;
-                }
-              }
-
-              &:hover {
-                .top {
-                  top: -100%;
-                }
-
-                .bottom {
-                  top: 0;
-                }
-              }
-            }
-          }
-        }
-      }
-
     }
 
     .sub-list {
       display: flex;
       flex-direction: column;
-      gap: 16px;
+      gap: 10px;
       padding-top: 10px;
 
       @include mobile {
@@ -282,6 +340,7 @@
         @include mobile {
           font-size: 11.5px;
         }
+
       }
     }
 
@@ -295,7 +354,6 @@
       @include mobile {
         flex-direction: row;
         font-size: 12px;
-        gap: 15px;
       }
 
       a {
@@ -305,6 +363,11 @@
         overflow: hidden;
         height: 15px;
         line-height: 15px;
+        width: 100%;
+
+        &:nth-child(1) {
+          width: 33%;
+        }
 
         span {
           display: block;
