--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -516,6 +516,10 @@ body {
         @include mobile {
           min-width: 115px;
         }
+
+        @include minDevice {
+          margin-left: 70px;
+        }
       }
     }
   }
@@ -578,6 +582,10 @@ body {
         margin-left: 90px;
       }
 
+      @include minDevice {
+        margin-left: 24px;
+      }
+
       .bottom {
         display: flex;
         align-items: flex-end;
@@ -588,32 +596,41 @@ body {
           flex-direction: column;
           align-items: flex-start;
           gap: 40px;
-
-          .link-title {
-            margin: 0;
-
-            @include mobile {
-              min-width: 130px;
-            }
-          }
         }
 
         .text {
+          br {
 
-          br:nth-child(4) {
-            display: none;
-          }
+            &:nth-child(1),
+            &:nth-child(4) {
+              display: none;
 
-          @include mobile {
-            br:nth-child(4) {
-              display: block;
+              @include mobile {
+                display: block;
+              }
+
+              @include minDevice {
+                display: block;
+              }
             }
           }
         }
 
         .link-title {
           min-width: 260px;
+
+          @include mobile {
+            margin: 0;
+            min-width: 160px;
+            margin-left: 70px;
+          }
+
+          @include minDevice {
+            margin: 0;
+            // margin-left: 24px;
+          }
         }
+
       }
     }
   }
@@ -718,6 +735,10 @@ body {
       .inner-content {
         .image-box {
           width: 334px;
+
+          @include mobile {
+            width: 200px;
+          }
         }
       }
 
@@ -768,13 +789,13 @@ body {
       height: 100%;
 
       .image-box {
-        position: relative;
+        position: absolute;
         top: 8.7%;
+        left: 50%;
+        transform: translateX(-50%);
         z-index: 1;
         width: 242px;
         margin: 0 auto;
-
-
 
         @include desktop {
           width: 190px;
@@ -784,6 +805,10 @@ body {
         @include mobile {
           width: 121px;
           bottom: 148px;
+        }
+
+        @include minDevice {
+          width: 35vw;
         }
       }
     }
@@ -822,7 +847,8 @@ body {
       }
 
       .link-title {
-        min-width: 175px;
+        // min-width: 175px;
+        min-width: 110px;
 
         &:after {
           bottom: 10px;
@@ -1157,6 +1183,10 @@ body {
 
             @include mobile {
               width: 230px;
+            }
+
+            @include minDevice {
+              max-width: 55vw;
             }
           }
 
