--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #f48f58;
+  background-color: #e43d67;
   // background-color: #ff9daf;
 }
 
@@ -47,6 +47,7 @@ body {
   line-height: 1.1;
   letter-spacing: -0.02em;
   font-family: "SUITE-Regular", sans-serif;
+  display: block;
 
   @include mobile {
     font-size: 8.5vw;
@@ -61,7 +62,9 @@ body {
   color: #fff;
   word-wrap: break-word;
   letter-spacing: -0.02em;
-  font-family: "SUITE-Regular", sans-serif;
+  // font-family: "SUITE-Regular", sans-serif;
+
+  font-family: "Poppins", sans-serif;
 
   @include mobile {
     line-height: 1.5;
@@ -318,7 +321,7 @@ body {
 
 
 .section-concept {
-  margin-top: 400px;
+  margin-top: 300px;
 
   @include mobile {
     margin-top: 100px;
@@ -343,6 +346,10 @@ body {
     transform: translateY(-13%);
     clip-path: polygon(100% 100%, 0% 100%, 0.00% 36.67%, 2.00% 36.00%, 4.00% 34.06%, 6.00% 31.05%, 8.00% 27.30%, 10.00% 23.20%, 12.00% 19.19%, 14.00% 15.68%, 16.00% 13.06%, 18.00% 11.59%, 20.00% 11.43%, 22.00% 12.61%, 24.00% 14.99%, 26.00% 18.32%, 28.00% 22.25%, 30.00% 26.37%, 32.00% 30.24%, 34.00% 33.45%, 36.00% 35.66%, 38.00% 36.63%, 40.00% 36.27%, 42.00% 34.61%, 44.00% 31.83%, 46.00% 28.22%, 48.00% 24.16%, 50.00% 20.09%, 52.00% 16.43%, 54.00% 13.57%, 56.00% 11.81%, 58.00% 11.35%, 60.00% 12.22%, 62.00% 14.34%, 64.00% 17.48%, 66.00% 21.31%, 68.00% 25.43%, 70.00% 29.39%, 72.00% 32.79%, 74.00% 35.25%, 76.00% 36.52%, 78.00% 36.47%, 80.00% 35.10%, 82.00% 32.55%, 84.00% 29.10%, 86.00% 25.11%, 88.00% 21.00%, 90.00% 17.21%, 92.00% 14.14%, 94.00% 12.11%, 96.00% 11.34%, 98.00% 11.91%, 100.00% 13.75%);
     transition: 1s;
+
+    img {
+      width: 100%;
+    }
 
 
     &.on {
@@ -419,8 +426,7 @@ body {
     bottom: 0;
     left: calc(-50vw - min(100vw, 1162px) * -1 / 2);
     z-index: -1;
-    background: #e5631c;
-    // background: #ff5885;
+    background: #e96880;
 
     @include mobile {
       left: calc(-50vw - min(100vw, 640px) * -1 / 2);
@@ -452,6 +458,7 @@ body {
   .image-box {
     transform: translateY(-15%);
     max-width: 1093px;
+    height: 632px;
     margin-right: -278px;
     margin-left: auto;
     clip-path: polygon(100% 100%, 0% 100%, 0.00% 36.67%, 2.00% 36.00%, 4.00% 34.06%, 6.00% 31.05%, 8.00% 27.30%, 10.00% 23.20%, 12.00% 19.19%, 14.00% 15.68%, 16.00% 13.06%, 18.00% 11.59%, 20.00% 11.43%, 22.00% 12.61%, 24.00% 14.99%, 26.00% 18.32%, 28.00% 22.25%, 30.00% 26.37%, 32.00% 30.24%, 34.00% 33.45%, 36.00% 35.66%, 38.00% 36.63%, 40.00% 36.27%, 42.00% 34.61%, 44.00% 31.83%, 46.00% 28.22%, 48.00% 24.16%, 50.00% 20.09%, 52.00% 16.43%, 54.00% 13.57%, 56.00% 11.81%, 58.00% 11.35%, 60.00% 12.22%, 62.00% 14.34%, 64.00% 17.48%, 66.00% 21.31%, 68.00% 25.43%, 70.00% 29.39%, 72.00% 32.79%, 74.00% 35.25%, 76.00% 36.52%, 78.00% 36.47%, 80.00% 35.10%, 82.00% 32.55%, 84.00% 29.10%, 86.00% 25.11%, 88.00% 21.00%, 90.00% 17.21%, 92.00% 14.14%, 94.00% 12.11%, 96.00% 11.34%, 98.00% 11.91%, 100.00% 13.75%);
@@ -471,9 +478,14 @@ body {
       margin-left: 84px;
     }
 
+    picture {
+      height: 100%;
+    }
+
     img {
       object-fit: cover;
       width: 100%;
+      height: 100%;
     }
   }
 
@@ -601,8 +613,7 @@ body {
         .text {
           br {
 
-            &:nth-child(1),
-            &:nth-child(4) {
+            &:nth-child(1) {
               display: none;
 
               @include mobile {
@@ -637,11 +648,20 @@ body {
 
   .image-box {
     max-width: 1093px;
+    // height: 632px;
     margin-right: auto;
     margin-bottom: -54px;
     position: relative;
     clip-path: polygon(100% 100%, 0% 100%, 0.00% 36.67%, 2.00% 36.00%, 4.00% 34.06%, 6.00% 31.05%, 8.00% 27.30%, 10.00% 23.20%, 12.00% 19.19%, 14.00% 15.68%, 16.00% 13.06%, 18.00% 11.59%, 20.00% 11.43%, 22.00% 12.61%, 24.00% 14.99%, 26.00% 18.32%, 28.00% 22.25%, 30.00% 26.37%, 32.00% 30.24%, 34.00% 33.45%, 36.00% 35.66%, 38.00% 36.63%, 40.00% 36.27%, 42.00% 34.61%, 44.00% 31.83%, 46.00% 28.22%, 48.00% 24.16%, 50.00% 20.09%, 52.00% 16.43%, 54.00% 13.57%, 56.00% 11.81%, 58.00% 11.35%, 60.00% 12.22%, 62.00% 14.34%, 64.00% 17.48%, 66.00% 21.31%, 68.00% 25.43%, 70.00% 29.39%, 72.00% 32.79%, 74.00% 35.25%, 76.00% 36.52%, 78.00% 36.47%, 80.00% 35.10%, 82.00% 32.55%, 84.00% 29.10%, 86.00% 25.11%, 88.00% 21.00%, 90.00% 17.21%, 92.00% 14.14%, 94.00% 12.11%, 96.00% 11.34%, 98.00% 11.91%, 100.00% 13.75%);
     transition: 1s;
+
+    // picture {
+    //   height: 100%;
+    // }
+
+    // img {
+    //   height: 100%;
+    // }
 
     &.on {
       clip-path:
@@ -778,7 +798,7 @@ body {
       width: 100%;
       height: 100%;
       border-radius: 360px;
-      background-color: #e5631c;
+      background-color: #e96880;
       // background-color: #ff5885;
     }
 
@@ -988,7 +1008,7 @@ body {
 
 
 .section-news {
-  background: #e5631c;
+  background: #e96880;
   // background: #ff5885;
   position: relative;
   margin-top: 256px;
