--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -38,7 +38,7 @@
   width: 100%;
   height: 100%;
   // background: #ff5885;
-  background: #e5631c;
+  background: #e43d67;
   z-index: 100;
   font-family: "SUITE-Regular", sans-serif;
 
